2003-11-02  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/string_manip.cpp: format_double can only format percent
	* libutil++/string_manip.h:
	* libpp/format_output.cpp:
	* libutil++/tests/string_manip_tests.cpp:
	* pp/opannotate.cpp:
	* pp/opreport.cpp: s/format_double/format_percent/

2003-11-02  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/glob_filter.h:
	* libutil++/string_filter.h:
	* libutil++/tests/string_filter_tests.cpp: minor tidy

	* libutil++/tests/glob_filter_tests.cpp: new file
	* libutil++/tests/Makefile.am: update build

2003-11-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: typo
	* libutil++/generic_spec.cpp: removed file
	* libutil++/Makefile.am: update according
	* libutil++/generic_spec.h: ensure generic_spec<string> will not link
	* libutil++/path_filter.cpp: minor tidy

2003-11-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/tests/string_manip_tests.cpp: ehance output on failure
	* module/oprofile.h:
	* module/oprofile.c: two new read-only sysctl: nr_buffer_overflow and
	  nr_note_buffer_overflow

2003-11-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/tests/Makefile.am:
	* libutil++/tests/file_manip_tests.cpp: don't use getcwd nor __FILE__
	  but ${topdir} and hard coded filename

2003-11-01  John Levon  <levon@movementarian.org>

	* daemon/liblegacy/opd_parse_proc.c: use op_follow_link

	* libutil/op_file.c:
	* libutil/op_file.h: make op_get_link() static, rename
	op_basename to op_c_basename

	* libutil++/file_manip.cpp:
	* libutil++/file_manip.h: rename to op_basename()/op_dirname().
	Use op_follow_link() for follow_link().

	* libutil++/tests/file_manip_tests.cpp:
	* gui/oprof_start_util.cpp:
	* libpp/locate_images.cpp:
	* libpp/name_storage.cpp:
	* libutil++/path_filter.cpp:
	* pp/opannotate.cpp:
	* pp/opreport.cpp: fixup from above changes

2003-11-01  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.h: has_debug_info() new member
	* pp/populate.h:
	* pp/populate.cpp: 