@@ -4,5 +4,6 @@ Makefile
 string_manip_tests
 string_filter_tests
 glob_filter_tests
+path_filter_tests
 comma_list_tests
 file_manip_tests
